# smart-bird-cage

./: README.md  docker-compose.yml  nginx.conf  package-lock.json
client/: package-lock.json  package.json  svelte.config.js
client/src/: app.css  app.html
client/src/components/: Card.svelte  ColumnChart.svelte  CustomChart.svelte  HumidityChart.svelte  LightChart.svelte  LineChart.svelte  MovementChart.svelte  SoundChart.svelte  TemperatureChart.svelte  TestChart.svelte  WeightChart.svelte
client/src/lib/: api.ts  fetch.ts
client/src/lib/interfaces/: columnData.ts  sensorData.ts
client/src/routes/: +page.svelte  +page.ts
client/src/routes/24/: +page.svelte
embdedded/: DHT22.ino  backendConnection.ino
embedded/: Climate.cpp  Climate.h  Connection.cpp  Connection.h  DHT22Measurement.cpp  DHT22Measurement.h  Display.cpp  Display.h  LDR.cpp  LDR.h  Light.cpp  Light.h  Loadcell.cpp  Loadcell.h  Microphone.cpp  Microphone.h  PIRMeasurement.cpp  PIRMeasurement.h  Radar.cpp  Radar.h  backendConnection.ino  embedded.ino
server/: Cargo.toml  Dockerfile  Rocket.toml
server/src/: main.rs
server/src/db/: devices.rs  influx.rs  mod.rs
server/src/fairings/: db.rs  mod.rs
server/src/lib/: env.rs
server/src/models/: data.rs  device.rs  grouping_interval.rs  mod.rs  sensor.rs
server/src/request_guards/: auth.rs
server/src/routes/: mod.rs
server/src/routes/data/: get.rs  post.rs
server/src/routes/device/: get.rs  mod.rs  post.rs
server/src/utils/: env.rs
tester/: package-lock.json  package.json  tsconfig.json
tester/src/: app.ts
(+1 files in other folders)
