[package]
name = "smart-bird-cage-server"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rocket-validation = "0.2.0"
validator = { version = "0.16", features = ["derive"] }

[dependencies.rocket]
version = "0.5.0"
default-features = false
features = ["json"]
