[package]
name = "server"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true


[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

dotenv = "0.15.0"
envy = "0.4.2"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
rustls = "0.23.7"
rocket-validation = "0.2.0"
validator = { version = "0.16", features = ["derive"] }


[dependencies.sqlx]
version = "0.7"
features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "bigdecimal", "chrono"]

[dependencies.rocket]
version = "0.5.0"
default-features = false
features = ["json"]
